<?xml version='1.0' encoding='UTF-8'?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!--Copyright (c) 2024 Boston Dynamics AI Institute LLC. All rights reserved.-->
<package format="3">
    <name>cppflow</name>
    <version>0.0.0</version>
    <description>Implementation of CppFlow - a fast cartesian planner</description>
    <maintainer email="jsmorgan6@gmail.com">Jeremy Morgan</maintainer>
    <license>TODO: License declaration</license>

    <buildtool_depend>ament_python</buildtool_depend>

    <depend>bdai_ros</depend>
    <depend>bdai_ros2_wrappers</depend>
    <depend>rclpy</depend>
    <depend>std_msgs</depend>

    <!-- Exec Msg Dependencies -->
    <!-- <depend>bdai_manipulation_msgs</depend>
    <depend>control_msgs</depend>
    <depend>franka_msgs</depend>
    <depend>trajectory_msgs</depend>
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend> -->

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>