<?xml version='1.0' encoding='UTF-8'?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!--Copyright (c) 2024 Boston Dynamics AI Institute LLC. All rights reserved.-->
<package format="3">
    <name>cppflow</name>
    <version>0.0.0</version>
    <description>Implementation of CppFlow - a fast cartesian planner</description>
    <maintainer email="jsmorgan6@gmail.com">Jeremy Morgan</maintainer>
    <license>TODO: License declaration</license>

    <depend>bdai_ros</depend>
    <depend>bdai_ros2_wrappers</depend>
    <depend>rclpy</depend>
    <depend>std_msgs</depend>
    <depend>cppflow_msgs</depend>
    <depend>visualization_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>


    <!-- for messages -->
    <build_depend>rosidl_default_generators</build_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>
    <member_of_group>rosidl_interface_packages</member_of_group>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>