[tool.poetry]
name = "cppflow"
version = "0.1.0"
description = ""
authors = ["Jeremy Morgan <jsmorgan6@gmail.com>", "David Millard <dmillard@gmail.com>"]
license = "MIT"
readme = "README.md"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120


[tool.poetry.dependencies]
python = ">=3.8.0,<3.11"
jrl = { git = "https://github.com/jstmn/jrl.git", rev = "e08a900c4ef77d75a54446c193b4a49acfd3cbaf" }
ikflow = { git = "https://github.com/jstmn/ikflow.git", rev = "902051aa92fb8b6b1e3c5527564654a9ac9ca08e" }
psutil = "5.9.8"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pylint = "^2.16.2"
pandas = "1.5.3"
tabulate = "0.9.0"
pytest = "8.2.0"