[project]
name = "cppflow"
version = "0.1.0"
description = ""
requires-python = ">=3.10,<3.12"
authors = [
    { name="Jeremy Morgan", email="jsmorgan6@gmail.com" },
    { name="David Millard", email="dmillard@gmail.com" }
]
readme = "README.md"
dependencies = [
    "jrl @ git+https://github.com/jstmn/jrl.git@ef4c2f6eb1ba84395ff0bb01d5b7713854df6908",
    "ikflow @ git+https://github.com/jstmn/ikflow.git@19634d436eb805f22578b4c5b6526f96d91d0323",
    "psutil>=7.0.0",
    "ruff>=0.11.11",
    "black>=25.1.0",
    "pytest>=8.3.5",
]

[tool.setuptools.packages]
find = { include = ["cppflow"], exclude = ["media", "examples", "notebooks"] }

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
cppflow = ["**/*.yaml", "**/*.csv", "paths/paths_torm/"]



[tool.ruff]
line-length = 120
lint.ignore = ["E741"]
